--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -26,8 +26,8 @@ jobs:
 
       - name: Terraform Apply
         env:
-          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          ARM_CLIENT_ID: ${{ secrets.clientId }}
+          ARM_CLIENT_SECRET: ${{ secrets.clientSecret }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.subscriptionId }}
+          ARM_TENANT_ID: ${{ secrets.tenantId }}
         run: terraform apply -auto-approve
